# clinvar-tc

./: .gitignore  README.md
aou_methods/: README.md  Snakefile  config.yaml  environment.yml  manual_check_pathogenicity.py  pyproject.toml  r_environment.yml
aou_methods/.snakemake/metadata/: Y29uY2F0X2d0X3RhYmxlL2dlbm90eXBlX3RhYmxlLnRzdg==  Y29uY2F0X2d0X3RhYmxlL2dlbm90eXBlX3RhYmxlLnRzdi5neg==  ZGV2X291dHB1dC9jb25jYXRfZ3RfdGFibGUvZ2Vub3R5cGVfdGFibGUudHN2Lmd6  ZGV2X291dHB1dC9sb2dpc3RpY19yZWdyZXNzaW9uX2FuZF9vdmVybGFwL2xvZ2lzdGljX3JlZ3Jlc2lzb24udHN2  ZGV2X291dHB1dC9sb2dpc3RpY19yZWdyZXNzaW9uX2FuZF9vdmVybGFwL3ZhcmlhbnRfc3VtbWFyeS50c3Y=  ZGV2X291dHB1dC9wZXJfY2hyb21fZ3RfdGFibGUvY2hyMjAudHN2Lmd6  ZGV2X291dHB1dC9wZXJfY2hyb21fZ3RfdGFibGUvY2hyMjEudHN2Lmd6  ZGV2X291dHB1dC9yZWdyZXNzaW9uX2lucHV0cy9pbmhlcml0YW5jZS50c3Y=  ZGV2X291dHB1dDIvY29uY2F0X2d0X3RhYmxlL2dlbm90eXBlX3RhYmxlLnRzdi5neg==  ZGV2X291dHB1dDIvcGVyX2Nocm9tX2d0X3RhYmxlL2NocjIwLnRzdi5neg==  ZGV2X291dHB1dDIvcGVyX2Nocm9tX2d0X3RhYmxlL2NocjIxLnRzdi5neg==  ZGV2X291dHB1dDIvcmVncmVzc2lvbl9pbnB1dHMvaW5oZXJpdGFuY2UudHN2  (+13 more)
aou_methods/R_scripts/: APC_pathogenic_variants_AoU_v7.R  PTEN_pathogenic_variants_AoU_v7.R  RET_pathogenic_variants_AoU_v7.R  calculate_inheritance.R  multiple_logistic_regression.R
aou_methods/bash_scripts/: concat.sh  filter_vcf.sh
aou_methods/example_inputs/: example_fake_covariates.tsv  example_fake_covariates2.tsv  fake_GRCh38_clinvar_21.tsv  fake_clinvar_21.tsv  regions.tsv  regions_21.tsv
aou_methods/scratch/: COL18A1_check.tsv  COL6A2_check.tsv  clinvar_21.tsv
ukbb_methods/: README.md  simplify.py  (+2 more)
(+10 files in other folders)
