[tool.poetry]
name = "aou-methods"
version = "0.1.0"
description = "Python dependencies for prevalence screening in AoU"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "aou_methods"}]

[tool.poetry.dependencies]
python = "^3.11"
snakemake = "^8.25.3"
defopt = "^6.4.0"
polars = "^1.13.1"
numpy = "^2.1.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
